# MacroDeck

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.json  macro_docs.md  project_properties.txt  props.md
conf-gen/: macro-deck-config.py  main.py  requirements.txt
docs/: actions.md  config.md  home.md  install.md  macro.md
macros/: desktop_1.json  desktop_2.json  desktop_3.json  example_macro.json  focus_browser.json  focus_terminal.json  open_terminal.json  pcmanfm.json  setup.json  setup_desktop.json  type.json  volume_down.json  volume_mute.json  volume_set.json  volume_toggle.json  volume_unmute.json  volume_up.json  wikipedia.json
print_things/: tlacitko_Fab_lab.blend
src/: action.hpp  api.cpp  api.hpp  apps.cpp  apps.hpp  keyboard.cpp  keyboard.hpp  loader.cpp  loader.hpp  log.cpp  log.hpp  macro.hpp  main.cpp  opcode.cpp  opcode.hpp  ports.cpp  ports.hpp  sound.cpp  sound.hpp
static/: script.js  style.css
templates/: index.html
